# Poiesis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.localdev.yml  docker-compose.yml  poiesis.db-shm  poiesis.db-wal  pyproject.toml  run_loop.py
.github/workflows/: ci.yml  docker.yml
data/: .gitkeep
docker/: Dockerfile.api  Dockerfile.embed  Dockerfile.web  config.yaml  nginx.conf
docs/: developer_guide.md
examples/: config.yaml  world_seed.yaml  world_seed_zh.yaml
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppShell.tsx  BookBlueprintWorkspace.tsx  BookCreateModal.tsx  ChangePasswordModal.tsx  ConfirmModal.tsx  Feedback.tsx  ModalBase.tsx  PoiesisLogo.tsx  PromptModal.tsx  StatCard.tsx  WordTrendChart.tsx
frontend/src/contexts/: ActiveBookContext.tsx  AuthContext.tsx
frontend/src/lib/: display-labels.ts  relationship-graph.ts  roadmap-workspace.ts  scene-detail.ts  utils.ts
frontend/src/pages/: Books.tsx  Canon.tsx  ChapterDetail.tsx  Chapters.tsx  Dashboard.tsx  Login.tsx  LoopBoard.tsx  ReviewQueue.tsx  Run.tsx  RunBoard.tsx  SceneRunDetail.tsx  Settings.tsx  Staging.tsx  Stats.tsx  Workspace.tsx
poiesis/: __init__.py  cli.py  config.py  crypto.py  editor.py  extractor.py  merger.py  originality.py  planner.py  run_loop.py  summarizer.py  verifier.py  world.py  writer.py
poiesis/api/: __init__.py  deps.py  main.py  task_registry.py
poiesis/application/: __init__.py  blueprint_contracts.py  blueprint_use_cases.py  contracts.py  creative_orchestrator.py  persistence.py  pipeline.py  scene_contracts.py  use_cases.py
poiesis/db/: __init__.py  database.py  schema.sql
poiesis/domain/: __init__.py
poiesis/embedding/: __init__.py  base.py  dummy.py  remote.py
poiesis/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py  siliconflow_client.py
poiesis/pipeline/: __init__.py
poiesis/vector_store/: __init__.py  providers.py  store.py
prompts/: editor.txt  extractor.txt  planner.txt  summarizer.txt  verifier.txt  writer.txt
scripts/: cleanup.sh  down.sh  llm_minimal_probe_db.py  rebuild.sh  smoke_test_api.py  up.sh  update.sh
services/embed/: __init__.py  main.py  model_loader.py  requirements.txt
tests/: __init__.py  conftest.py  test_anthropic_client.py  test_api.py  test_auth.py  test_blueprint_api.py  test_cli.py  test_contracts.py  test_database.py  test_embedding.py  test_extractor.py  test_language_prompts.py  test_llm_factory.py  test_llm_json_extraction.py  test_llm_minimal_live.py  test_openai_client.py  test_originality.py  test_pipeline_structure.py  test_roadmap_generation_errors.py  test_run_service.py  test_scene_api.py  test_scene_run_service.py  test_scene_use_cases.py  test_seed_language_selection.py  test_siliconflow_client.py  test_siliconflow_smoke.py  test_system_config.py  test_task_registry.py  test_vector_store.py  test_verifier.py  test_world_consistency.py
(+95 files in other folders)
